--- a/novalojaraccoon/styles/css/vtex.product-price.css
+++ b/novalojaraccoon/styles/css/vtex.product-price.css
@@ -3,19 +3,21 @@
   margin-bottom: .25rem;
   font-size: 1rem;
 }
-
+.taxPercentage{
+  font-weight: 700;
+}
 .sellingPrice {
   color: #3f3f40;
-  font-size: 1.25rem;
+  font-size: 1rem;
 }
 
 .sellingPriceValue {
-  font-size: 2.25rem;
+  font-size: 1.125rem;
   font-weight: 700;
 }
 
 .installments {
-  color: #727273;
+  color: #2d2d2d;
   margin-bottom: 1rem;
 }
 
